fix mobile author align

--- a/_bergi/static/style.css
+++ b/_bergi/static/style.css
@@ -480,7 +480,10 @@ a.tw:hover {
 }
 @media screen and (max-width: 767px){
 	.author-hero > * {
-		margin: 0 12px;
+		margin: 0 8px;
+	}
+	.author-hero header {
+		margin-left: 116px;
 	}
 	.author-hero h1 {
 		font-size: 24px;
